using collectors to make launch4j happy